--- a/package.json
+++ b/package.json
@@ -56,10 +56,14 @@
     "rss": "^1.2.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.24.0",
     "@fisch0920/eslint-config": "^1.4.0",
     "@next/bundle-analyzer": "^15.0.2",
+    "@next/eslint-plugin-next": "^15.3.0",
     "@types/node": "^22.8.6",
     "@types/react": "^18.0.21",
+    "@typescript-eslint/eslint-plugin": "^8.29.1",
+    "@typescript-eslint/parser": "^8.29.1",
     "cross-env": "^7.0.2",
     "eslint": "^8.57.1",
     "npm-run-all2": "^7.0.1",
