--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,5 @@
 {
-  "root": true,
-  "extends": ["@fisch0920/eslint-config"],
+  "extends": ["next/core-web-vitals"],
   "rules": {
     "react/prop-types": "off",
     "unicorn/no-array-reduce": "off",
